@@ -12,8 +12,8 @@ title = "No title provided"
 description = "No description provided"
 
 [cylc]
-    force run mode = None
     UTC mode = False
+    required run mode = False
     pyro connection timeout = (none)
     maximum simultaneous job submissions = 50
     abort if any task fails = False
@@ -36,6 +36,7 @@ description = "No description provided"
     [[environment]]
         # (none)
     [[accelerated clock]]
+        disable = False
         rate = 10
         offset = 24
     [[reference test]]
@@ -43,6 +44,8 @@ description = "No description provided"
         live mode suite timeout = None
         dummy mode suite timeout = None
         simulation mode suite timeout = None
+        required run mode = None
+        allow task failures = False
 [scheduling]
     initial cycle time = None
     final cycle time = None
@@ -71,10 +74,7 @@ description = "No description provided"
         description = "No description provided"
         initial scripting = None
         pre-command scripting = None
-        command scripting = "echo Dummy command scripting; sleep 10"
-        dummy mode command scripting = "echo Dummy command scripting; sleep 10"
-        simulation mode run length = 10.0 # (seconds)
-        fail in simulation mode = False
+        command scripting = "echo Dummy command scripting; sleep $(cylc rnd 1 16)"
         retry delays = (none)
         post-command scripting = None
         manual completion = False
@@ -82,6 +82,13 @@ description = "No description provided"
         log directory = '$HOME/cylc-run/$CYLC_SUITE_REG_NAME/log/job'
         share directory = '$CYLC_SUITE_DEF_PATH/share'
         work directory = '$CYLC_SUITE_DEF_PATH/work/$CYLC_TASK_ID'
+        [[[simulation mode]]]
+            run time range = 1,16 # real seconds
+            simulate failure = False
+        [[[dummy mode]]]
+            command scripting = "echo Dummy command scripting; sleep $(cylc rnd 1 16)"
+            disable pre-command scripting = True
+            disable post-command scripting = True
         [[[job submission]]]
             method = background
             command template = None
