@@ -37,7 +37,7 @@ description = string( default="No description provided" )
 #___________________________________________________________________CYLC
 [cylc]
     UTC mode = boolean( default=False )
-    force run mode = option( 'live', 'simulation', 'dummy', default=None )
+    required run mode = option( 'live','dummy','simulation', default=None )
     pyro connection timeout = float( min=0.0, default=None )
     maximum simultaneous job submissions = integer( min=1, default=50 )
     abort if any task fails = boolean( default=False )
@@ -60,10 +60,12 @@ description = string( default="No description provided" )
         abort if shutdown handler fails = boolean( default=False )
         abort on timeout = boolean( default=False )
     [[accelerated clock]]
+        disable = boolean( default=False )
         rate = integer( default=10 )
         offset = integer( default=24 )
     [[reference test]]
         suite shutdown event handler = string( default='cylc hook check-triggering' )
+        required run mode = option( 'live', 'simulation', 'dummy', default=None )
         allow task failures = boolean( default=False )
         live mode suite timeout = float( default=None )
         dummy mode suite timeout = float( default=None )
@@ -101,10 +103,7 @@ description = string( default="No description provided" )
         inherit = string( default=None )
         description = string( default="No description provided" )
         initial scripting = string( default=None )
-        command scripting = string( default='echo Default command scripting; sleep 10')
-        dummy mode command scripting = string( default='echo Dummy command scripting; sleep 10')
-        simulation mode run length = float( default=10 )
-        fail in simulation mode = boolean( default=False )
+        command scripting = string( default='echo Default command scripting; sleep $(cylc rnd 1 16)')
         retry delays = force_list( default=list() )
         pre-command scripting = string( default=None )
         post-command scripting = string( default=None )
@@ -114,6 +113,13 @@ description = string( default="No description provided" )
         log directory = string( default='$HOME/cylc-run/$CYLC_SUITE_REG_NAME/log/job' )
         share directory = string( default='$CYLC_SUITE_DEF_PATH/share' )
         work directory = string( default='$CYLC_SUITE_DEF_PATH/work/$CYLC_TASK_ID' )
+        [[[simulation mode]]]
+            run time range = list( default=list(1,16))
+            simulate failure = boolean( default=False )
+        [[[dummy mode]]]
+            command scripting = string( default='echo Dummy command scripting; sleep $(cylc rnd 1 16)')
+            disable pre-command scripting = boolean( default=True )
+            disable post-command scripting = boolean( default=True )
         [[[job submission]]]
             method = string( default=background )
             command template = string( default=None )
@@ -146,8 +152,6 @@ description = string( default="No description provided" )
         description = string( default=None )
         initial scripting = string( default=None )
         command scripting = string( default=None )
-        dummy mode command scripting = string( default=None )
-        simulation mode run length = float( default=None )
         fail in simulation mode = boolean( default=None )
         retry delays = force_list( default=list() )
         pre-command scripting = string( default=None )
@@ -158,6 +162,13 @@ description = string( default="No description provided" )
         log directory = string( default=None )
         share directory = string( default=None )
         work directory = string( default=None )
+        [[[simulation mode]]]
+            run time range = list( default=list() )
+            simulate failure = boolean( default=None )
+        [[[dummy mode]]]
+            command scripting = string( default=None )
+            disable pre-command scripting = boolean( default=None )
+            disable post-command scripting = boolean( default=None )
         [[[job submission]]]
             method = string( default=None )
             command template = string( default=None )
